Translate web-business

--- a/apps/web-business/src/locales/el.json
+++ b/apps/web-business/src/locales/el.json
@@ -1,22 +1,71 @@
 {
     "common": {
-        "language": "Γλώσσα",
+        "yes": "Ναι",
+        "no": "Όχι",
+        "save": "Αποθήκευση",
+        "cancel": "Ακύρωση",
+        "delete": "Διαγραφή",
+        "edit": "Επεξεργασία",
+        "create": "Δημιουργία",
+        "close": "Κλείσιμο",
+        "back": "Πίσω",
+        "next": "Επόμενο",
+        "submit": "Υποβολή",
+        "loading": "Φόρτωση...",
+        "error": "Σφάλμα",
+        "success": "Επιτυχία",
+        "search": "Αναζήτηση",
+        "filter": "Φίλτρο",
+        "actions": "Ενέργειες",
+        "name": "Όνομα",
+        "email": "Email",
+        "phone": "Τηλέφωνο",
+        "address": "Διεύθυνση",
+        "street": "Οδός",
+        "city": "Πόλη",
+        "zipCode": "Ταχυδρομικός Κώδικας",
+        "country": "Χώρα",
+        "description": "Περιγραφή",
+        "price": "Τιμή",
+        "capacity": "Χωρητικότητα",
+        "duration": "Διάρκεια",
+        "instructor": "Εκπαιδευτής",
+        "category": "Κατηγορία",
+        "required": "Απαιτείται",
+        "optional": "Προαιρετικό",
+        "enabled": "Ενεργό",
+        "disabled": "Απενεργοποιημένο",
+        "signIn": "Σύνδεση",
+        "signOut": "Αποσύνδεση",
+        "backToSignIn": "Πίσω στη σύνδεση",
+        "termsOfService": "Όρους Χρήσης",
+        "privacyPolicy": "Πολιτική Απορρήτου",
+        "agreementText": "Κάνοντας κλικ στο συνέχεια, συμφωνείτε με τους",
+        "and": "και",
+        "date": "Ημερομηνία",
+        "time": "Ώρα",
+        "status": "Κατάσταση",
+        "venue": "Χώρος",
+        "venues": "Χώροι",
+        "bookings": "Κρατήσεις",
+        "booking": "Κράτηση",
+        "participants": "Συμμετέχοντες",
+        "maxParticipants": "Μέγιστος αριθμός συμμετεχόντων",
+        "credits": "credits",
+        "priceInEuros": "Τιμή σε Ευρώ",
+        "general": "Γενικά",
+        "unknownUser": "Άγνωστος Χρήστης",
+        "unknownVenue": "Άγνωστος Χώρος",
+        "noMessagesYet": "Δεν υπάρχουν μηνύματα ακόμα",
+        "justNow": "Μόλις τώρα",
+        "yesterday": "Χθες",
+        "daysAgo": "{{count}} ημέρες πριν",
+        "minAgo": "{{count}} λεπτά πριν",
+        "hoursAgo": "{{count}}ω πριν",
         "languages": {
             "en": "Αγγλικά (English)",
             "el": "Ελληνικά (Greek)",
             "lt": "Λιθουανικά (Lithuanian)"
-        },
-        "buttons": {
-            "yes": "Ναι",
-            "no": "Όχι",
-            "signIn": "Σύνδεση",
-            "backToSignIn": "Πίσω στη σύνδεση"
-        },
-        "terms": {
-            "agreementText": "Κάνοντας κλικ στο συνέχεια, συμφωνείτε με τους",
-            "termsOfService": "Όρους Χρήσης",
-            "and": "και",
-            "privacyPolicy": "Πολιτική Απορρήτου"
         }
     },
     "routes": {
@@ -29,8 +78,273 @@
             "codeVerificationError": "Ο κωδικός δεν μπόρεσε να επαληθευτεί, δοκιμάστε ξανά"
         },
         "dashboard": {
-            "title": "Πίνακας ελέγχου",
-            "description": "Καλώς ήρθατε στην πίνακα ελέγχου"
+            "title": "Πίνακας Ελέγχου",
+            "checkInsToday": "Check-ins σήμερα",
+            "monthlyVisits": "Μηνιαίες επισκέψεις",
+            "monthlyRevenue": "Μηνιαία έσοδα",
+            "attendanceRate": "Ποσοστό συμμετοχής",
+            "vsYesterday": "σε σχέση με χθες",
+            "vsLastMonth": "σε σχέση με τον προηγούμενο μήνα",
+            "last100Classes": "τελευταίες 100 τάξεις",
+            "happeningToday": "Σημερινές Τάξεις",
+            "recentFeedback": "Σχόλια Χρηστών",
+            "aiInsights": "AI Insights",
+            "noClassesToday": "Δεν έχουν προγραμματιστεί τάξεις για σήμερα",
+            "noFeedback": "Δεν υπάρχουν σχόλια ακόμα"
+        },
+        "calendar": {
+            "title": "Ημερολόγιο",
+            "newClass": "Νέα τάξη",
+            "bookingsOpened": "Οι κρατήσεις άνοιξαν με επιτυχία",
+            "bookingsClosed": "Οι κρατήσεις έκλεισαν με επιτυχία",
+            "failedToUpdateBookingStatus": "Αποτυχία ενημέρωσης κατάστασης κράτησης"
+        },
+        "templates": {
+            "title": "Υπηρεσίες",
+            "subtitle": "Δημιουργήστε και διαχειριστείτε τα πρότυπα τάξεων σας για εύκολο προγραμματισμό",
+            "noTemplatesYet": "Δεν υπάρχουν πρότυπα ακόμα",
+            "noTemplatesDescription": "Δημιουργήστε το πρώτο σας πρότυπο τάξης για να ξεκινήσετε",
+            "deleteTemplate": "Διαγραφή Προτύπου",
+            "deleteTemplateConfirm": "Είστε σίγουροι ότι θέλετε να διαγράψετε αυτό το πρότυπο; Αυτή η ενέργεια δεν μπορεί να αναιρεθεί.",
+            "templateDeletedSuccess": "Το πρότυπο διαγράφηκε με επιτυχία!",
+            "failedToDeleteTemplate": "Αποτυχία διαγραφής προτύπου. Παρακαλώ δοκιμάστε ξανά.",
+            "loadMore": "Φόρτωση Περισσότερων",
+            "loadingMore": "Φόρτωση περισσότερων...",
+            "createTemplate": "Δημιουργία Προτύπου",
+            "editTemplate": "Επεξεργασία Προτύπου",
+            "classDetails": "Λεπτομέρειες Τάξης",
+            "classSettings": "Ρυθμίσεις Τάξης",
+            "bookingRules": "Κανόνες Κράτησης",
+            "bookingWindow": "Παράθυρο Κράτησης",
+            "refundPolicy": "Πολιτική Επιστροφής",
+            "discountRules": "Κανόνες Έκπτωσης",
+            "classNamePlaceholder": "π.χ., Αρχάριος Γιόγκα",
+            "instructorPlaceholder": "Όνομα εκπαιδευτή",
+            "descriptionPlaceholder": "Περιγράψτε την τάξη...",
+            "selectCategory": "Επιλέξτε κατηγορία",
+            "selectVenue": "Επιλέξτε χώρο",
+            "selectDuration": "Επιλέξτε διάρκεια",
+            "tagsPlaceholder": "Πληκτρολογήστε μια ετικέτα και πατήστε Enter",
+            "priceBetween": "Η τιμή πρέπει να είναι μεταξύ €1.00 και €100.00",
+            "capacityGreaterThanZero": "Η χωρητικότητα πρέπει να είναι μεγαλύτερη από 0",
+            "classNameRequired": "Το όνομα τάξης είναι υποχρεωτικό",
+            "instructorRequired": "Το όνομα εκπαιδευτή είναι υποχρεωτικό",
+            "venueRequired": "Ο χώρος είναι υποχρεωτικός",
+            "categoryRequired": "Η κατηγορία είναι υποχρεωτική",
+            "durationRequired": "Η διάρκεια είναι υποχρεωτική",
+            "priceRequired": "Η τιμή είναι υποχρεωτική",
+            "allowWaitlist": "Να επιτρέπεται λίστα αναμονής",
+            "waitlistCapacity": "Χωρητικότητα λίστας αναμονής",
+            "enableBookingWindow": "Ενεργοποίηση παραθύρου κράτησης",
+            "minHoursBefore": "Ελάχιστες ώρες πριν την τάξη",
+            "maxHoursBefore": "Μέγιστες ώρες πριν την τάξη",
+            "enableRefundPolicy": "Ενεργοποίηση πολιτικής επιστροφής",
+            "cancellationWindowHours": "Παράθυρο ακύρωσης (ώρες)",
+            "disableBookings": "Απενεργοποίηση κρατήσεων",
+            "alwaysOn": "Πάντα Ενεργό",
+            "earlyBooking": "Πρώιμη Κράτηση",
+            "lastMinute": "Τελευταία Στιγμή",
+            "discount": "Έκπτωση"
+        },
+        "earnings": {
+            "title": "Έσοδα",
+            "grossRevenue": "Ακαθάριστα Έσοδα",
+            "systemCut": "Προμήθεια Συστήματος",
+            "yourEarnings": "Τα Έσοδά σας",
+            "totalBookings": "Συνολικές Κρατήσεις",
+            "exportCsv": "Εξαγωγή CSV",
+            "exportData": "Εξαγωγή Δεδομένων",
+            "selectMonth": "Επιλέξτε Μήνα",
+            "noEarnings": "Δεν υπάρχουν δεδομένα εσόδων για αυτόν τον μήνα",
+            "monthlyBookings": "Μηνιαίες Κρατήσεις",
+            "monthlyEarnings": "Μηνιαία Έσοδα",
+            "avgBookingPrice": "Μέση Τιμή Κράτησης",
+            "allTimeEarnings": "Συνολικά Έσοδα",
+            "classesCompleted": "Ολοκληρωμένες τάξεις",
+            "yourRevenueThisMonth": "Τα έσοδά σας αυτόν τον μήνα",
+            "averagePerBooking": "Μέσος όρος ανά κράτηση",
+            "totalLifetimeRevenue": "Συνολικά έσοδα βιογραφικού",
+            "bookingDetails": "Λεπτομέρειες Κρατήσεων",
+            "bookingDetailsDescription": "Αναλυτική ανάλυση όλων των κρατήσεων τάξεων και εσόδων. Οι εγγραφές εμφανίζονται μετά την ολοκλήρωση της τάξης.",
+            "noBookingsFound": "Δεν βρέθηκαν κρατήσεις για",
+            "totalMonthlyEarnings": "Συνολικά Μηνιαία Έσοδα",
+            "tableDate": "Ημερομηνία",
+            "tableClassName": "Όνομα Τάξης",
+            "tableConsumer": "Πελάτης",
+            "tableGrossPrice": "Ακαθάριστη Τιμή",
+            "tableSystemCut": "Προμήθεια Συστήματος",
+            "tableYourEarnings": "Τα Έσοδά σας",
+            "tableStatus": "Κατάσταση"
+        },
+        "settings": {
+            "title": "Ρυθμίσεις",
+            "venues": "Χώροι",
+            "businessDetails": "Λεπτομέρειες Επιχείρησης",
+            "basicInformation": "Βασικές Πληροφορίες",
+            "businessName": "Όνομα Επιχείρησης",
+            "businessNamePlaceholder": "Εισάγετε το όνομά της επιχείρησής σας",
+            "emailPlaceholder": "business@example.com",
+            "descriptionPlaceholder": "Πείτε μας για την επιχείρησή σας...",
+            "phonePlaceholder": "+30 123 456 7890",
+            "websitePlaceholder": "https://example.com",
+            "addressPlaceholder": "Οδός Κεντρική 123",
+            "cityPlaceholder": "Αθήνα",
+            "zipCodePlaceholder": "12345",
+            "countryPlaceholder": "Ελλάδα",
+            "instagramPlaceholder": "https://instagram.com/yourvenue",
+            "facebookPlaceholder": "https://facebook.com/yourvenue",
+            "youtubePlaceholder": "https://youtube.com/yourvenue",
+            "noVenueFound": "Δεν βρέθηκε χώρος για την επιχείρησή σας.",
+            "socialMedia": "Κοινωνικά Δίκτυα",
+            "instagram": "Instagram",
+            "facebook": "Facebook",
+            "youtube": "YouTube",
+            "venueNamePlaceholder": "π.χ., Κύρια Αίθουσα",
+            "venueEmailPlaceholder": "venue@example.com",
+            "venueDescriptionPlaceholder": "Περιγράψτε αυτόν τον χώρο...",
+            "selectBusinessCategory": "Επιλέξτε κατηγορία επιχείρησης",
+            "venuePhonePlaceholder": "+30 123 456 7890",
+            "venueWebsitePlaceholder": "https://example.com",
+            "addAnotherVenue": "Προσθήκη άλλου χώρου",
+            "createVenue": "Δημιουργία Χώρου",
+            "editVenue": "Επεξεργασία Χώρου",
+            "venueNameRequired": "Το όνομα χώρου είναι υποχρεωτικό",
+            "emailRequired": "Το email είναι υποχρεωτικό",
+            "streetRequired": "Η οδός είναι υποχρεωτική",
+            "cityRequired": "Η πόλη είναι υποχρεωτική",
+            "zipCodeRequired": "Ο ταχυδρομικός κώδικας είναι υποχρεωτικός",
+            "zipCodeMustBe5Digits": "Ο ταχυδρομικός κώδικας πρέπει να είναι 5 ψηφία",
+            "selectCategoryRequired": "Παρακαλώ επιλέξτε κατηγορία επιχείρησης",
+            "websiteMustStartWithHttp": "Ο ιστότοπος πρέπει να ξεκινά με http:// ή https://",
+            "descriptionMax2000": "Η περιγραφή πρέπει να είναι λιγότερο από 2000 χαρακτήρες",
+            "notifications": {
+                "title": "Ειδοποιήσεις",
+                "emailNotifications": "Ειδοποιήσεις Email",
+                "pushNotifications": "Push Ειδοποιήσεις",
+                "bookingNotifications": "Ειδοποιήσεις Κρατήσεων",
+                "reminderNotifications": "Ειδοποιήσεις Υπενθύμισης",
+                "marketingNotifications": "Ειδοποιήσεις Marketing",
+                "notificationSettings": "Ρυθμίσεις Ειδοποιήσεων",
+                "loadingPreferences": "Φόρτωση προτιμήσεων ειδοποιήσεων...",
+                "configureNotifications": "Ρυθμίστε πώς θέλετε να λαμβάνετε ειδοποιήσεις για την επιχείρησή σας.",
+                "businessNotifications": "Ειδοποιήσεις Επιχείρησης",
+                "chooseChannels": "Επιλέξτε πώς θέλετε να λαμβάνετε ειδοποιήσεις για κάθε τύπο συμβάντος.",
+                "eventType": "Τύπος Συμβάντος",
+                "channel": "Κανάλι",
+                "none": "Καμία",
+                "emailOnly": "Μόνο Email",
+                "webOnly": "Μόνο Web",
+                "webAndEmail": "Web & Email",
+                "saving": "Αποθήκευση...",
+                "saveChanges": "Αποθήκευση Αλλαγών",
+                "preferencesSavedSuccess": "Οι προτιμήσεις ειδοποιήσεων αποθηκεύτηκαν με επιτυχία",
+                "failedToSavePreferences": "Αποτυχία αποθήκευσης προτιμήσεων ειδοποιήσεων",
+                "newBooking": "Νέα Κράτηση",
+                "whenCustomerBooks": "Όταν ένας πελάτης κάνει κράτηση για μια τάξη",
+                "customerCancellation": "Ακύρωση Πελάτη",
+                "whenCustomerCancels": "Όταν ένας πελάτης ακυρώνει την κράτησή του",
+                "businessCancellation": "Ακύρωση Επιχείρησης",
+                "whenYouCancel": "Όταν ακυρώνετε μια τάξη",
+                "paymentReceived": "Πληρωμή Λήφθηκε",
+                "whenPaymentReceived": "Όταν λαμβάνεται μια πληρωμή",
+                "newReview": "Νέα Αξιολόγηση",
+                "whenReviewApproved": "Όταν μια αξιολόγηση χρήστη εγκριθεί"
+            },
+            "account": {
+                "title": "Λογαριασμός",
+                "companyName": "Όνομα Εταιρείας",
+                "companyNamePlaceholder": "Το όνομά της εταιρείας σας",
+                "phonePlaceholder": "π.χ. +30 69XXXXXXXX",
+                "yourName": "Το Όνομά σας",
+                "yourNamePlaceholder": "Το όνομά σας",
+                "language": "Γλώσσα",
+                "languageDescription": "Επιλέξτε την προτιμώμενη γλώσσα για τη διεπαφή.",
+                "selectLanguage": "Επιλογή Γλώσσας",
+                "account": "Λογαριασμός",
+                "manageProfile": "Διαχείριση του επιχειρηματικού και προσωπικού προφίλ σας.",
+                "companyDetails": "Λεπτομέρειες Εταιρείας",
+                "companyDescription": "Εδώ αλλάζετε τις πληροφορίες της εταιρείας σας. Αυτές οι πληροφορίες δεν είναι ορατές στους πελάτες. Δεν χρειάζεται να τις αλλάξετε εκτός αν το πραγματικό όνομά της εταιρείας, τα στοιχεία επικοινωνίας ή η διεύθυνση διαφέρουν από αυτά που χρησιμοποιήσατε κατά την εγγραφή.",
+                "businessName": "Όνομα Επιχείρησης",
+                "phoneNumber": "Αριθμός Τηλεφώνου",
+                "saving": "Αποθήκευση...",
+                "saveChanges": "Αποθήκευση αλλαγών",
+                "businessDetailsUpdated": "Οι λεπτομέρειες επιχείρησης ενημερώθηκαν",
+                "failedToUpdateBusiness": "Αποτυχία ενημέρωσης λεπτομερειών επιχείρησης",
+                "profile": "Προφίλ",
+                "updatePersonalInfo": "Ενημέρωση των προσωπικών σας πληροφοριών.",
+                "name": "Όνομα",
+                "profileUpdated": "Το προφίλ ενημερώθηκε",
+                "failedToUpdateProfile": "Αποτυχία ενημέρωσης προφίλ",
+                "nameRequired": "Το όνομά της επιχείρησης είναι υποχρεωτικό"
+            }
+        },
+        "bookings": {
+            "title": "Κρατήσεις",
+            "classBookings": "Κρατήσεις {{className}}",
+            "date": "Ημερομηνία:",
+            "time": "Ώρα:",
+            "capacity": "Χωρητικότητα:",
+            "booked": "Κρατημένα:",
+            "available": "Διαθέσιμα:",
+            "waitlist": "Λίστα αναμονής:",
+            "noBookings": "Δεν υπάρχουν κρατήσεις ακόμα",
+            "noBookingsDescription": "Αυτή η τάξη δεν έχει κρατήσεις ακόμα."
+        },
+        "messages": {
+            "title": "Μηνύματα",
+            "searchConversations": "Αναζήτηση συνομιλιών...",
+            "noConversations": "Δεν υπάρχουν συνομιλίες",
+            "noConversationsDescription": "Δεν έχετε μηνύματα ακόμα.",
+            "typeYourMessage": "Πληκτρολογήστε το μήνυμά σας...",
+            "send": "Αποστολή"
+        },
+        "onboarding": {
+            "title": "Ολοκληρώστε το Προφίλ της Επιχείρησής σας",
+            "subtitle": "Ας ρυθμίσουμε την επιχείρησή σας για να ξεκινήσετε",
+            "businessInformation": "Πληροφορίες Επιχείρησης",
+            "locationDetails": "Λεπτομέρειες Τοποθεσίας",
+            "amenities": "Απολαύσεις",
+            "services": "Υπηρεσίες",
+            "businessNameRequired": "Το όνομά της επιχείρησης είναι υποχρεωτικό",
+            "emailRequired": "Το email είναι υποχρεωτικό",
+            "validEmail": "Παρακαλώ εισάγετε έγκυρη διεύθυνση email",
+            "streetRequired": "Η διεύθυνση οδού είναι υποχρεωτική",
+            "cityRequired": "Η πόλη είναι υποχρεωτική",
+            "zipCodeRequired": "Ο ταχυδρομικός κώδικας είναι υποχρεωτικός",
+            "zipCodeMustBe5Digits": "Ο ταχυδρομικός κώδικας πρέπει να είναι 5 ψηφία",
+            "selectCategoryRequired": "Παρακαλώ επιλέξτε κατηγορία επιχείρησης",
+            "descriptionMax2000": "Η περιγραφή πρέπει να είναι λιγότερο από 2000 χαρακτήρες",
+            "showers": "Ντουζιέρες",
+            "accessible": "Προσβάσιμο",
+            "mats": "Χαλάκια",
+            "yoga": "Γιόγκα",
+            "pilates": "Πιλάτες",
+            "gym": "Γυμναστήριο / Fitness",
+            "massage": "Μασάζ / Θεραπεία",
+            "dance": "Χορός",
+            "crossfit": "Crossfit",
+            "spinning": "Spinning",
+            "boxing": "Μποξ",
+            "martialArts": "Πολεμικές Τέχνες",
+            "swimming": "Κολύμπι",
+            "personalTraining": "Προσωπική Προπόνηση",
+            "physiotherapy": "Φυσιοθεραπεία",
+            "nutrition": "Διατροφή",
+            "meditation": "Διαλογισμός",
+            "stretching": "Τέντωμα",
+            "hiit": "HIIT",
+            "zumba": "Ζούμπα",
+            "trx": "TRX",
+            "createBusiness": "Δημιουργία Επιχείρησης",
+            "saving": "Αποθήκευση...",
+            "failedToCreateBusiness": "Αποτυχία δημιουργίας επιχείρησης. Παρακαλώ δοκιμάστε ξανά."
         }
+    },
+    "errors": {
+        "somethingWentWrong": "Κάτι πήγε στραβά",
+        "unexpectedError": "Παρουσιάστηκε απρόσμενο σφάλμα. Ζητούμε συγγνώμη για την ταλαιπωρία.",
+        "errorDetails": "Λεπτομέρειες Σφάλματος (Λειτουργία Ανάπτυξης)",
+        "tryAgain": "Δοκιμή Ξανά",
+        "reloadPage": "Ανανέωση Σελίδας"
     }
 }
