--- a/apps/web-business/src/locales/en.json
+++ b/apps/web-business/src/locales/en.json
@@ -1,22 +1,71 @@
 {
     "common": {
-        "language": "Language",
+        "yes": "Yes",
+        "no": "No",
+        "save": "Save",
+        "cancel": "Cancel",
+        "delete": "Delete",
+        "edit": "Edit",
+        "create": "Create",
+        "close": "Close",
+        "back": "Back",
+        "next": "Next",
+        "submit": "Submit",
+        "loading": "Loading...",
+        "error": "Error",
+        "success": "Success",
+        "search": "Search",
+        "filter": "Filter",
+        "actions": "Actions",
+        "name": "Name",
+        "email": "Email",
+        "phone": "Phone",
+        "address": "Address",
+        "street": "Street",
+        "city": "City",
+        "zipCode": "Zip Code",
+        "country": "Country",
+        "description": "Description",
+        "price": "Price",
+        "capacity": "Capacity",
+        "duration": "Duration",
+        "instructor": "Instructor",
+        "category": "Category",
+        "required": "Required",
+        "optional": "Optional",
+        "enabled": "Enabled",
+        "disabled": "Disabled",
+        "signIn": "Sign In",
+        "signOut": "Sign Out",
+        "backToSignIn": "Back to sign in",
+        "termsOfService": "Terms of Service",
+        "privacyPolicy": "Privacy Policy",
+        "agreementText": "By clicking continue, you agree to our",
+        "and": "and",
+        "date": "Date",
+        "time": "Time",
+        "status": "Status",
+        "venue": "Venue",
+        "venues": "Venues",
+        "bookings": "Bookings",
+        "booking": "Booking",
+        "participants": "Participants",
+        "maxParticipants": "Max participants",
+        "credits": "credits",
+        "priceInEuros": "Price in Euros",
+        "general": "General",
+        "unknownUser": "Unknown User",
+        "unknownVenue": "Unknown Venue",
+        "noMessagesYet": "No messages yet",
+        "justNow": "Just now",
+        "yesterday": "Yesterday",
+        "daysAgo": "{{count}} days ago",
+        "minAgo": "{{count}} min ago",
+        "hoursAgo": "{{count}}h ago",
         "languages": {
             "en": "English",
             "el": "Greek",
             "lt": "Lithuanian"
-        },
-        "buttons": {
-            "yes": "Yes",
-            "no": "No",
-            "signIn": "Sign In",
-            "backToSignIn": "Back to sign in"
-        },
-        "terms": {
-            "agreementText": "By clicking continue, you agree to our",
-            "termsOfService": "Terms of Service",
-            "and": "and",
-            "privacyPolicy": "Privacy Policy"
         }
     },
     "routes": {
@@ -29,8 +78,248 @@
             "codeVerificationError": "Code could not be verified, try again"
         },
         "dashboard": {
-            "title": "Dashboard",
-            "description": "Welcome to the dashboard"
+            "title": "My Dashboard",
+            "checkInsToday": "Check-ins today",
+            "monthlyVisits": "Monthly visits",
+            "monthlyRevenue": "Monthly revenue",
+            "attendanceRate": "Attendance rate",
+            "vsYesterday": "vs yesterday",
+            "vsLastMonth": "vs last month",
+            "last100Classes": "last 100 classes",
+            "happeningToday": "Today's Classes",
+            "recentFeedback": "User Feedback",
+            "aiInsights": "AI Insights",
+            "noClassesToday": "No classes scheduled for today",
+            "noFeedback": "No feedback yet"
+        },
+        "calendar": {
+            "title": "My Calendar",
+            "newClass": "New class",
+            "bookingsOpened": "Bookings opened successfully",
+            "bookingsClosed": "Bookings closed successfully",
+            "failedToUpdateBookingStatus": "Failed to update booking status"
+        },
+        "templates": {
+            "title": "Class Templates",
+            "subtitle": "Create and manage your class templates for easy scheduling",
+            "noTemplatesYet": "No templates yet",
+            "noTemplatesDescription": "Create your first class template to get started with scheduling",
+            "deleteTemplate": "Delete Template",
+            "deleteTemplateConfirm": "Are you sure you want to delete this template? This action cannot be undone.",
+            "templateDeletedSuccess": "Template deleted successfully!",
+            "failedToDeleteTemplate": "Failed to delete template. Please try again.",
+            "loadMore": "Load More",
+            "loadingMore": "Loading more...",
+            "createTemplate": "Create Template",
+            "editTemplate": "Edit Template",
+            "classDetails": "Class Details",
+            "classSettings": "Class Settings",
+            "bookingRules": "Booking Rules",
+            "bookingWindow": "Booking Window",
+            "refundPolicy": "Refund Policy",
+            "discountRules": "Discount Rules",
+            "classNamePlaceholder": "e.g., Beginner Yoga",
+            "instructorPlaceholder": "Instructor name",
+            "descriptionPlaceholder": "Describe the class...",
+            "selectCategory": "Select category",
+            "selectVenue": "Select venue",
+            "selectDuration": "Select duration",
+            "tagsPlaceholder": "Type a tag and press Enter",
+            "priceBetween": "Price must be between €1.00 and €100.00",
+            "capacityGreaterThanZero": "Capacity must be greater than 0",
+            "classNameRequired": "Class name is required",
+            "instructorRequired": "Instructor name is required",
+            "venueRequired": "Venue is required",
+            "categoryRequired": "Category is required",
+            "durationRequired": "Duration is required",
+            "priceRequired": "Price is required",
+            "allowWaitlist": "Allow waitlist",
+            "waitlistCapacity": "Waitlist capacity",
+            "enableBookingWindow": "Enable booking window",
+            "minHoursBefore": "Minimum hours before class",
+            "maxHoursBefore": "Maximum hours before class",
+            "enableRefundPolicy": "Enable refund policy",
+            "cancellationWindowHours": "Cancellation window (hours)",
+            "disableBookings": "Disable bookings",
+            "alwaysOn": "Always On",
+            "earlyBooking": "Early Booking",
+            "lastMinute": "Last Minute",
+            "discount": "Discount"
+        },
+        "earnings": {
+            "title": "Earnings",
+            "grossRevenue": "Gross Revenue",
+            "systemCut": "System Cut",
+            "yourEarnings": "Your Earnings",
+            "totalBookings": "Total Bookings",
+            "exportCsv": "Export CSV",
+            "exportData": "Export Data",
+            "selectMonth": "Select Month",
+            "noEarnings": "No earnings data available for this month",
+            "monthlyBookings": "Monthly Bookings",
+            "monthlyEarnings": "Monthly Earnings",
+            "avgBookingPrice": "Avg Booking Price",
+            "allTimeEarnings": "All-time Earnings",
+            "classesCompleted": "Classes completed",
+            "yourRevenueThisMonth": "Your revenue this month",
+            "averagePerBooking": "Average per booking",
+            "totalLifetimeRevenue": "Total lifetime revenue",
+            "bookingDetails": "Booking Details",
+            "bookingDetailsDescription": "Detailed breakdown of all class bookings and earnings. Records appear after the class has been completed.",
+            "noBookingsFound": "No bookings found for",
+            "totalMonthlyEarnings": "Total Monthly Earnings",
+            "tableDate": "Date",
+            "tableClassName": "Class Name",
+            "tableConsumer": "Consumer",
+            "tableGrossPrice": "Gross Price",
+            "tableSystemCut": "System Cut",
+            "tableYourEarnings": "Your Earnings",
+            "tableStatus": "Status"
+        },
+        "settings": {
+            "title": "Settings",
+            "venues": "Venues",
+            "businessDetails": "Business Details",
+            "basicInformation": "Basic Information",
+            "businessName": "Business Name",
+            "businessNamePlaceholder": "Enter your business name",
+            "emailPlaceholder": "business@example.com",
+            "descriptionPlaceholder": "Tell us about your business...",
+            "phonePlaceholder": "+30 123 456 7890",
+            "websitePlaceholder": "https://example.com",
+            "addressPlaceholder": "123 Main Street",
+            "cityPlaceholder": "Athens",
+            "zipCodePlaceholder": "12345",
+            "countryPlaceholder": "Greece",
+            "instagramPlaceholder": "https://instagram.com/yourvenue",
+            "facebookPlaceholder": "https://facebook.com/yourvenue",
+            "youtubePlaceholder": "https://youtube.com/yourvenue",
+            "noVenueFound": "No venue found for your business.",
+            "socialMedia": "Social Media",
+            "instagram": "Instagram",
+            "facebook": "Facebook",
+            "youtube": "YouTube",
+            "venueNamePlaceholder": "e.g., Main Studio",
+            "venueEmailPlaceholder": "venue@example.com",
+            "venueDescriptionPlaceholder": "Describe this venue...",
+            "selectBusinessCategory": "Select business category",
+            "venuePhonePlaceholder": "+30 123 456 7890",
+            "venueWebsitePlaceholder": "https://example.com",
+            "addAnotherVenue": "Add another venue",
+            "createVenue": "Create Venue",
+            "editVenue": "Edit Venue",
+            "venueNameRequired": "Venue name is required",
+            "emailRequired": "Email is required",
+            "streetRequired": "Street is required",
+            "cityRequired": "City is required",
+            "zipCodeRequired": "Zip code is required",
+            "zipCodeMustBe5Digits": "Zip code must be 5 digits",
+            "selectCategoryRequired": "Please select a business category",
+            "websiteMustStartWithHttp": "Website must start with http:// or https://",
+            "descriptionMax2000": "Description must be less than 2000 characters",
+            "notifications": {
+                "title": "Notifications",
+                "notificationPreferences": "Notification Preferences",
+                "emailNotifications": "Email Notifications",
+                "pushNotifications": "Push Notifications",
+                "bookingNotifications": "Booking Notifications",
+                "reminderNotifications": "Reminder Notifications",
+                "marketingNotifications": "Marketing Notifications"
+            },
+            "account": {
+                "title": "Account Settings",
+                "manageProfile": "Manage your business and personal profile.",
+                "companyDetails": "Company Details",
+                "companyDescription": "Here you change your company information. This information is not customer-facing. You don't need to change it unless your actual company name, contact details or address are different from the ones you used during onboarding.",
+                "companyName": "Company Name",
+                "companyNamePlaceholder": "Your company name",
+                "businessName": "Business name",
+                "phoneNumber": "Phone number",
+                "phonePlaceholder": "e.g. +30 69XXXXXXXX",
+                "saving": "Saving…",
+                "saveChanges": "Save changes",
+                "businessDetailsUpdated": "Business details updated",
+                "failedToUpdateBusiness": "Failed to update business details",
+                "profile": "Profile",
+                "updatePersonalInfo": "Update your personal information.",
+                "name": "Name",
+                "yourName": "Your Name",
+                "yourNamePlaceholder": "Your name",
+                "profileUpdated": "Profile updated",
+                "failedToUpdateProfile": "Failed to update profile",
+                "nameRequired": "Business name is required",
+                "language": "Language",
+                "languageDescription": "Choose your preferred language for the interface.",
+                "selectLanguage": "Select Language"
+            }
+        },
+        "bookings": {
+            "title": "Bookings",
+            "classBookings": "{{className}} Bookings",
+            "date": "Date:",
+            "time": "Time:",
+            "capacity": "Capacity:",
+            "booked": "Booked:",
+            "available": "Available:",
+            "waitlist": "Waitlist:",
+            "noBookings": "No bookings yet",
+            "noBookingsDescription": "This class doesn't have any bookings yet."
+        },
+        "messages": {
+            "title": "Messages",
+            "searchConversations": "Search conversations...",
+            "noConversations": "No conversations",
+            "noConversationsDescription": "You don't have any messages yet.",
+            "typeYourMessage": "Type your message...",
+            "send": "Send"
+        },
+        "onboarding": {
+            "title": "Complete Your Business Profile",
+            "subtitle": "Let's set up your business to get started",
+            "businessInformation": "Business Information",
+            "locationDetails": "Location Details",
+            "amenities": "Amenities",
+            "services": "Services",
+            "businessNameRequired": "Business name is required",
+            "emailRequired": "Email is required",
+            "validEmail": "Please enter a valid email address",
+            "streetRequired": "Street address is required",
+            "cityRequired": "City is required",
+            "zipCodeRequired": "Zip code is required",
+            "zipCodeMustBe5Digits": "Zip code must be 5 digits",
+            "selectCategoryRequired": "Please select a business category",
+            "descriptionMax2000": "Description must be less than 2000 characters",
+            "showers": "Showers",
+            "accessible": "Accessible",
+            "mats": "Mats",
+            "yoga": "Yoga",
+            "pilates": "Pilates",
+            "gym": "Gym / Fitness",
+            "massage": "Massage / Therapy",
+            "dance": "Dance",
+            "crossfit": "Crossfit",
+            "spinning": "Spinning",
+            "boxing": "Boxing",
+            "martialArts": "Martial Arts",
+            "swimming": "Swimming",
+            "personalTraining": "Personal Training",
+            "physiotherapy": "Physiotherapy",
+            "nutrition": "Nutrition",
+            "meditation": "Meditation",
+            "stretching": "Stretching",
+            "hiit": "HIIT",
+            "zumba": "Zumba",
+            "trx": "TRX",
+            "createBusiness": "Create Business",
+            "saving": "Saving...",
+            "failedToCreateBusiness": "Failed to create business. Please try again."
         }
+    },
+    "errors": {
+        "somethingWentWrong": "Something went wrong",
+        "unexpectedError": "An unexpected error occurred. We apologize for the inconvenience.",
+        "errorDetails": "Error Details (Dev Mode)",
+        "tryAgain": "Try Again",
+        "reloadPage": "Reload Page"
     }
 }
