--- a/apps/web-business/src/locales/lt.json
+++ b/apps/web-business/src/locales/lt.json
@@ -1,36 +1,350 @@
 {
-    "common": {
-        "language": "Kalba",
-        "languages": {
-            "en": "Anglų (English)",
-            "el": "Graikų (Greek)",
-            "lt": "Lietuvių (Lithuanian)"
-        },
-        "buttons": {
-            "yes": "Taip",
-            "no": "Ne",
-            "signIn": "Prisijungti",
-            "backToSignIn": "Grįžti prie prisijungimo"
-        },
-        "terms": {
-            "agreementText": "Spustelėdami tęsti, sutinkate su mūsų",
-            "termsOfService": "Paslaugų teikimo sąlygomis",
-            "and": "ir",
-            "privacyPolicy": "Privatumo politika"
-        }
-    },
-    "routes": {
-        "signIn": {
-            "description": "Prisijunk prie revoliucijos!",
-            "title": "Prisijungti",
-            "subtitle": "Prisijunkite prie savo paskyros, kad tęstumėte",
-            "checkEmailTitle": "Patikrinkite savo el. paštą",
-            "checkEmailDescription": "Išsiuntėme prisijungimo kodą į",
-            "codeVerificationError": "Kodo patikrinti nepavyko, bandykite dar kartą"
-        },
-        "dashboard": {
-            "title": "Prietaisų skydelis",
-            "description": "Sveiki atvykę į prietaisų skydelį"
-        }
+  "common": {
+    "yes": "Taip",
+    "no": "Ne",
+    "save": "Išsaugoti",
+    "cancel": "Atšaukti",
+    "delete": "Ištrinti",
+    "edit": "Redaguoti",
+    "create": "Sukurti",
+    "close": "Uždaryti",
+    "back": "Atgal",
+    "next": "Kitas",
+    "submit": "Pateikti",
+    "loading": "Kraunama...",
+    "error": "Klaida",
+    "success": "Pavyko",
+    "search": "Ieškoti",
+    "filter": "Filtras",
+    "actions": "Veiksmai",
+    "name": "Vardas",
+    "email": "El. paštas",
+    "phone": "Telefonas",
+    "address": "Adresas",
+    "street": "Gatvė",
+    "city": "Miestas",
+    "zipCode": "Pašto kodas",
+    "country": "Šalis",
+    "description": "Aprašymas",
+    "price": "Kaina",
+    "capacity": "Talpa",
+    "duration": "Trukmė",
+    "instructor": "Instruktorius",
+    "category": "Kategorija",
+    "required": "Privaloma",
+    "optional": "Neprivaloma",
+    "enabled": "Įjungta",
+    "disabled": "Išjungta",
+    "signIn": "Prisijungti",
+    "signOut": "Atsijungti",
+    "backToSignIn": "Grįžti prie prisijungimo",
+    "termsOfService": "Paslaugų teikimo sąlygos",
+    "privacyPolicy": "Privatumo politika",
+    "agreementText": "Spustelėdami tęsti, sutinkate su mūsų",
+    "and": "ir",
+    "date": "Data",
+    "time": "Laikas",
+    "status": "Būsena",
+    "venue": "Vieta",
+    "venues": "Vietos",
+    "bookings": "Rezervacijos",
+    "booking": "Rezervacija",
+    "participants": "Dalyviai",
+    "maxParticipants": "Maksimalus dalyvių skaičius",
+    "credits": "kreditai",
+    "priceInEuros": "Kaina eurais",
+    "general": "Bendras",
+    "unknownUser": "Nežinomas Vartotojas",
+    "unknownVenue": "Nežinoma Vieta",
+    "noMessagesYet": "Dar nėra žinučių",
+    "justNow": "Ką tik",
+    "yesterday": "Vakar",
+    "daysAgo": "Prieš {{count}} dienas",
+    "minAgo": "{{count}} min. prieš",
+    "hoursAgo": "{{count}} val. prieš",
+    "languages": {
+      "en": "Anglų (English)",
+      "el": "Graikų (Greek)",
+      "lt": "Lietuvių (Lithuanian)"
     }
+  },
+  "routes": {
+    "signIn": {
+      "description": "Prisijunk prie revoliucijos!",
+      "title": "Prisijungti",
+      "subtitle": "Prisijunkite prie savo paskyros, kad tęstumėte",
+      "checkEmailTitle": "Patikrinkite savo el. paštą",
+      "checkEmailDescription": "Išsiuntėme prisijungimo kodą į",
+      "codeVerificationError": "Kodo patikrinti nepavyko, bandykite dar kartą"
+    },
+    "dashboard": {
+      "title": "Mano Valdymo Skydelis",
+      "checkInsToday": "Atvykimai šiandien",
+      "monthlyVisits": "Mėnesio apsilankymai",
+      "monthlyRevenue": "Mėnesio pajamos",
+      "attendanceRate": "Lankomumo lygis",
+      "vsYesterday": "lyginant su vakar",
+      "vsLastMonth": "lyginant su praėjusiu mėnesiu",
+      "last100Classes": "paskutinės 100 pamokų",
+      "happeningToday": "Šiandienos Pamokos",
+      "recentFeedback": "Vartotojų Atsiliepimai",
+      "aiInsights": "AI Įžvalgos",
+      "noClassesToday": "Šiandien nepaskirtos pamokos",
+      "noFeedback": "Dar nėra atsiliepimų"
+    },
+    "calendar": {
+      "title": "Mano Kalendorius",
+      "newClass": "Nauja pamoka",
+      "bookingsOpened": "Rezervacijos sėkmingai atidarytos",
+      "bookingsClosed": "Rezervacijos sėkmingai uždarytos",
+      "failedToUpdateBookingStatus": "Nepavyko atnaujinti rezervacijos būsenos"
+    },
+    "templates": {
+      "title": "Pamokų Šablonai",
+      "subtitle": "Kurkite ir tvarkykite savo pamokų šablonus lengvam planavimui",
+      "noTemplatesYet": "Dar nėra šablonų",
+      "noTemplatesDescription": "Sukurkite savo pirmąjį pamokos šabloną, kad pradėtumėte",
+      "deleteTemplate": "Ištrinti Šabloną",
+      "deleteTemplateConfirm": "Ar tikrai norite ištrinti šį šabloną? Šio veiksmo nebus galima anuliuoti.",
+      "templateDeletedSuccess": "Šablonas sėkmingai ištrintas!",
+      "failedToDeleteTemplate": "Nepavyko ištrinti šablono. Bandykite dar kartą.",
+      "loadMore": "Įkelti Daugiau",
+      "loadingMore": "Kraunama daugiau...",
+      "createTemplate": "Sukurti Šabloną",
+      "editTemplate": "Redaguoti Šabloną",
+      "classDetails": "Pamokos Detalės",
+      "classSettings": "Pamokos Nustatymai",
+      "bookingRules": "Rezervacijos Taisyklės",
+      "bookingWindow": "Rezervacijos Langas",
+      "refundPolicy": "Grąžinimo Politika",
+      "discountRules": "Nuolaidų Taisyklės",
+      "classNamePlaceholder": "pvz., Pradedančiųjų Joga",
+      "instructorPlaceholder": "Instruktoriaus vardas",
+      "descriptionPlaceholder": "Aprašykite pamoką...",
+      "selectCategory": "Pasirinkite kategoriją",
+      "selectVenue": "Pasirinkite vietą",
+      "selectDuration": "Pasirinkite trukmę",
+      "tagsPlaceholder": "Įveskite žymę ir paspauskite Enter",
+      "priceBetween": "Kaina turi būti nuo €1.00 iki €100.00",
+      "capacityGreaterThanZero": "Talpa turi būti didesnė nei 0",
+      "classNameRequired": "Pamokos pavadinimas yra privalomas",
+      "instructorRequired": "Instruktoriaus vardas yra privalomas",
+      "venueRequired": "Vieta yra privaloma",
+      "categoryRequired": "Kategorija yra privaloma",
+      "durationRequired": "Trukmė yra privaloma",
+      "priceRequired": "Kaina yra privaloma",
+      "allowWaitlist": "Leisti laukimo sąrašą",
+      "waitlistCapacity": "Laukimo sąrašo talpa",
+      "enableBookingWindow": "Įjungti rezervacijos langą",
+      "minHoursBefore": "Minimalus valandų skaičius prieš pamoką",
+      "maxHoursBefore": "Maksimalus valandų skaičius prieš pamoką",
+      "enableRefundPolicy": "Įjungti grąžinimo politiką",
+      "cancellationWindowHours": "Atšaukimo langas (valandos)",
+      "disableBookings": "Išjungti rezervacijas",
+      "alwaysOn": "Visada Įjungta",
+      "earlyBooking": "Ankstyva Rezervacija",
+      "lastMinute": "Paskutinė Minutė",
+      "discount": "Nuolaida"
+    },
+    "earnings": {
+      "title": "Pajamos",
+      "grossRevenue": "Bendrosios Pajamos",
+      "systemCut": "Sistemos Mokestis",
+      "yourEarnings": "Jūsų Pajamos",
+      "totalBookings": "Iš viso Rezervacijų",
+      "exportCsv": "Eksportuoti CSV",
+      "exportData": "Eksportuoti Duomenis",
+      "selectMonth": "Pasirinkite Mėnesį",
+      "noEarnings": "Šiam mėnesiui nėra pajamų duomenų",
+      "monthlyBookings": "Mėnesio Rezervacijos",
+      "monthlyEarnings": "Mėnesio Pajamos",
+      "avgBookingPrice": "Vidutinė Rezervacijos Kaina",
+      "allTimeEarnings": "Visų Laikų Pajamos",
+      "classesCompleted": "Užbaigtos pamokos",
+      "yourRevenueThisMonth": "Jūsų pajamos šį mėnesį",
+      "averagePerBooking": "Vidutiniškai už rezervaciją",
+      "totalLifetimeRevenue": "Bendros visos pajamos",
+      "bookingDetails": "Rezervacijų Detalės",
+      "bookingDetailsDescription": "Išsami visų pamokų rezervacijų ir pajamų analizė. Įrašai rodomi po pamokos užbaigimo.",
+      "noBookingsFound": "Rezervacijų nerasta",
+      "totalMonthlyEarnings": "Bendros Mėnesio Pajamos",
+      "tableDate": "Data",
+      "tableClassName": "Pamokos Pavadinimas",
+      "tableConsumer": "Vartotojas",
+      "tableGrossPrice": "Bendroji Kaina",
+      "tableSystemCut": "Sistemos Mokestis",
+      "tableYourEarnings": "Jūsų Pajamos",
+      "tableStatus": "Būsena"
+    },
+    "settings": {
+      "title": "Nustatymai",
+      "venues": "Vietos",
+      "businessDetails": "Verslo Detalės",
+      "basicInformation": "Pagrindinė Informacija",
+      "businessName": "Verslo Pavadinimas",
+      "businessNamePlaceholder": "Įveskite savo verslo pavadinimą",
+      "emailPlaceholder": "business@example.com",
+      "descriptionPlaceholder": "Papasakokite apie savo verslą...",
+      "phonePlaceholder": "+30 123 456 7890",
+      "websitePlaceholder": "https://example.com",
+      "addressPlaceholder": "Pagrindinė gatvė 123",
+      "cityPlaceholder": "Vilnius",
+      "zipCodePlaceholder": "12345",
+      "countryPlaceholder": "Lietuva",
+      "instagramPlaceholder": "https://instagram.com/yourvenue",
+      "facebookPlaceholder": "https://facebook.com/yourvenue",
+      "youtubePlaceholder": "https://youtube.com/yourvenue",
+      "noVenueFound": "Jūsų verslui nerasta vietos.",
+      "socialMedia": "Socialinės Medijos",
+      "instagram": "Instagram",
+      "facebook": "Facebook",
+      "youtube": "YouTube",
+      "venueNamePlaceholder": "pvz., Pagrindinė Studija",
+      "venueEmailPlaceholder": "venue@example.com",
+      "venueDescriptionPlaceholder": "Aprašykite šią vietą...",
+      "selectBusinessCategory": "Pasirinkite verslo kategoriją",
+      "venuePhonePlaceholder": "+30 123 456 7890",
+      "venueWebsitePlaceholder": "https://example.com",
+      "addAnotherVenue": "Pridėti kitą vietą",
+      "createVenue": "Sukurti Vietą",
+      "editVenue": "Redaguoti Vietą",
+      "venueNameRequired": "Vietos pavadinimas yra privalomas",
+      "emailRequired": "El. paštas yra privalomas",
+      "streetRequired": "Gatvė yra privaloma",
+      "cityRequired": "Miestas yra privalomas",
+      "zipCodeRequired": "Pašto kodas yra privalomas",
+      "zipCodeMustBe5Digits": "Pašto kodas turi būti 5 skaitmenys",
+      "selectCategoryRequired": "Prašome pasirinkti verslo kategoriją",
+      "websiteMustStartWithHttp": "Svetainė turi prasidėti su http:// arba https://",
+      "descriptionMax2000": "Aprašymas turi būti mažiau nei 2000 simbolių",
+      "notifications": {
+        "title": "Pranešimų Nustatymai",
+        "emailNotifications": "El. pašto Pranešimai",
+        "pushNotifications": "Push Pranešimai",
+        "bookingNotifications": "Rezervacijų Pranešimai",
+        "reminderNotifications": "Priminimų Pranešimai",
+        "marketingNotifications": "Rinkodaros Pranešimai",
+        "notificationSettings": "Pranešimų Nustatymai",
+        "loadingPreferences": "Kraunamos pranešimų nuostatos...",
+        "configureNotifications": "Nustatykite, kaip norite gauti pranešimus apie savo verslą.",
+        "businessNotifications": "Verslo Pranešimai",
+        "chooseChannels": "Pasirinkite, kaip norite gauti pranešimus kiekvienam įvykio tipui.",
+        "eventType": "Įvykio Tipas",
+        "channel": "Kanalas",
+        "none": "Nėra",
+        "emailOnly": "Tik El. paštas",
+        "webOnly": "Tik Web",
+        "webAndEmail": "Web ir El. paštas",
+        "saving": "Išsaugoma...",
+        "saveChanges": "Išsaugoti Pakeitimus",
+        "preferencesSavedSuccess": "Pranešimų nuostatos sėkmingai išsaugotos",
+        "failedToSavePreferences": "Nepavyko išsaugoti pranešimų nuostatų",
+        "newBooking": "Nauja Rezervacija",
+        "whenCustomerBooks": "Kai klientas užsisako pamoką",
+        "customerCancellation": "Kliento Atšaukimas",
+        "whenCustomerCancels": "Kai klientas atšaukia savo rezervaciją",
+        "businessCancellation": "Verslo Atšaukimas",
+        "whenYouCancel": "Kai jūs atšaukiate pamoką",
+        "paymentReceived": "Gauta Mokestis",
+        "whenPaymentReceived": "Kai gaunamas mokestis",
+        "newReview": "Naujas Atsiliepimas",
+        "whenReviewApproved": "Kai vartotojo atsiliepimas patvirtinamas"
+      },
+      "account": {
+        "title": "Paskyros Nustatymai",
+        "companyName": "Įmonės Pavadinimas",
+        "companyNamePlaceholder": "Jūsų įmonės pavadinimas",
+        "phonePlaceholder": "pvz. +30 69XXXXXXXX",
+        "yourName": "Jūsų Vardas",
+        "yourNamePlaceholder": "Jūsų vardas",
+        "language": "Kalba",
+        "languageDescription": "Pasirinkite pageidaujamą kalbą sąsajai.",
+        "selectLanguage": "Pasirinkti Kalbą",
+        "account": "Paskyra",
+        "manageProfile": "Tvarkykite savo verslo ir asmeninį profilį.",
+        "companyDetails": "Įmonės Detalės",
+        "companyDescription": "Čia keičiate savo įmonės informaciją. Ši informacija nėra matoma klientams. Jums nereikia jos keisti, nebent tikrasis įmonės pavadinimas, kontaktinė informacija arba adresas skiriasi nuo tų, kuriuos naudojote registracijos metu.",
+        "businessName": "Verslo Pavadinimas",
+        "phoneNumber": "Telefono Numeris",
+        "saving": "Išsaugoma...",
+        "saveChanges": "Išsaugoti pakeitimus",
+        "businessDetailsUpdated": "Verslo detalės atnaujintos",
+        "failedToUpdateBusiness": "Nepavyko atnaujinti verslo detalių",
+        "profile": "Profilis",
+        "updatePersonalInfo": "Keiskite savo asmeninę informaciją.",
+        "name": "Vardas",
+        "profileUpdated": "Profilis atnaujintas",
+        "failedToUpdateProfile": "Nepavyko atnaujinti profilio",
+        "nameRequired": "Verslo pavadinimas yra privalomas"
+      }
+    },
+    "bookings": {
+      "title": "Rezervacijos",
+      "classBookings": "{{className}} Rezervacijos",
+      "date": "Data:",
+      "time": "Laikas:",
+      "capacity": "Talpa:",
+      "booked": "Užsakyta:",
+      "available": "Prieinama:",
+      "waitlist": "Laukimo sąrašas:",
+      "noBookings": "Dar nėra rezervacijų",
+      "noBookingsDescription": "Ši pamoka dar neturi rezervacijų."
+    },
+    "messages": {
+      "title": "Žinutės",
+      "searchConversations": "Ieškoti pokalbių...",
+      "noConversations": "Nėra pokalbių",
+      "noConversationsDescription": "Jūs dar neturite žinučių.",
+      "typeYourMessage": "Įveskite savo žinutę...",
+      "send": "Siųsti"
+    },
+    "onboarding": {
+      "title": "Užbaikite Savo Verslo Profilį",
+      "subtitle": "Nustatykime jūsų verslą, kad galėtumėte pradėti",
+      "businessInformation": "Verslo Informacija",
+      "locationDetails": "Vietos Detalės",
+      "amenities": "Patogumai",
+      "services": "Paslaugos",
+      "businessNameRequired": "Verslo pavadinimas yra privalomas",
+      "emailRequired": "El. paštas yra privalomas",
+      "validEmail": "Prašome įvesti galiojantį el. pašto adresą",
+      "streetRequired": "Gatvės adresas yra privalomas",
+      "cityRequired": "Miestas yra privalomas",
+      "zipCodeRequired": "Pašto kodas yra privalomas",
+      "zipCodeMustBe5Digits": "Pašto kodas turi būti 5 skaitmenys",
+      "selectCategoryRequired": "Prašome pasirinkti verslo kategoriją",
+      "descriptionMax2000": "Aprašymas turi būti mažiau nei 2000 simbolių",
+      "showers": "Dušai",
+      "accessible": "Prieinama",
+      "mats": "Kilimėliai",
+      "yoga": "Joga",
+      "pilates": "Pilates",
+      "gym": "Sporto salė / Fitnesas",
+      "massage": "Masėžas / Terapija",
+      "dance": "Šokis",
+      "crossfit": "Crossfit",
+      "spinning": "Spinning",
+      "boxing": "Boksas",
+      "martialArts": "Kovos menai",
+      "swimming": "Plaukimas",
+      "personalTraining": "Asmeninė treniruotė",
+      "physiotherapy": "Fizioterapija",
+      "nutrition": "Mityba",
+      "meditation": "Meditacija",
+      "stretching": "Tempimas",
+      "hiit": "HIIT",
+      "zumba": "Zumba",
+      "trx": "TRX",
+      "createBusiness": "Sukurti Verslą",
+      "saving": "Išsaugoma...",
+      "failedToCreateBusiness": "Nepavyko sukurti verslo. Bandykite dar kartą."
+    }
+  },
+  "errors": {
+    "somethingWentWrong": "Kažkas nutiko",
+    "unexpectedError": "Įvyko netikėta klaida. Atsiprašome už nepatogumus.",
+    "errorDetails": "Klaidos Detalės (Kūrimo Režimas)",
+    "tryAgain": "Bandyti Dar Kartą",
+    "reloadPage": "Perkrauti Puslapį"
+  }
 }
